cmake_minimum_required(VERSION 3.6)
project(firmsmith)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    build/debug/revision.h
    include/float.h
    include/iso646.h
    include/limits.h
    include/stdarg.h
    include/stdbool.h
    include/stddef.h
    libfirm/build/gen/include/libfirm/nodes.h
    libfirm/build/gen/ir/be/amd64/gen_amd64_emitter.c
    libfirm/build/gen/ir/be/amd64/gen_amd64_emitter.h
    libfirm/build/gen/ir/be/amd64/gen_amd64_new_nodes.c
    libfirm/build/gen/ir/be/amd64/gen_amd64_new_nodes.h
    libfirm/build/gen/ir/be/amd64/gen_amd64_regalloc_if.c
    libfirm/build/gen/ir/be/amd64/gen_amd64_regalloc_if.h
    libfirm/build/gen/ir/be/arm/gen_arm_emitter.c
    libfirm/build/gen/ir/be/arm/gen_arm_emitter.h
    libfirm/build/gen/ir/be/arm/gen_arm_new_nodes.c
    libfirm/build/gen/ir/be/arm/gen_arm_new_nodes.h
    libfirm/build/gen/ir/be/arm/gen_arm_regalloc_if.c
    libfirm/build/gen/ir/be/arm/gen_arm_regalloc_if.h
    libfirm/build/gen/ir/be/ia32/gen_ia32_emitter.c
    libfirm/build/gen/ir/be/ia32/gen_ia32_emitter.h
    libfirm/build/gen/ir/be/ia32/gen_ia32_new_nodes.c
    libfirm/build/gen/ir/be/ia32/gen_ia32_new_nodes.h
    libfirm/build/gen/ir/be/ia32/gen_ia32_regalloc_if.c
    libfirm/build/gen/ir/be/ia32/gen_ia32_regalloc_if.h
    libfirm/build/gen/ir/be/sparc/gen_sparc_emitter.c
    libfirm/build/gen/ir/be/sparc/gen_sparc_emitter.h
    libfirm/build/gen/ir/be/sparc/gen_sparc_new_nodes.c
    libfirm/build/gen/ir/be/sparc/gen_sparc_new_nodes.h
    libfirm/build/gen/ir/be/sparc/gen_sparc_regalloc_if.c
    libfirm/build/gen/ir/be/sparc/gen_sparc_regalloc_if.h
    libfirm/build/gen/ir/be/TEMPLATE/gen_TEMPLATE_emitter.c
    libfirm/build/gen/ir/be/TEMPLATE/gen_TEMPLATE_emitter.h
    libfirm/build/gen/ir/be/TEMPLATE/gen_TEMPLATE_new_nodes.c
    libfirm/build/gen/ir/be/TEMPLATE/gen_TEMPLATE_new_nodes.h
    libfirm/build/gen/ir/be/TEMPLATE/gen_TEMPLATE_regalloc_if.c
    libfirm/build/gen/ir/be/TEMPLATE/gen_TEMPLATE_regalloc_if.h
    libfirm/build/gen/ir/ir/gen_irio.c
    libfirm/build/gen/ir/ir/gen_irnode.c
    libfirm/build/gen/ir/ir/gen_irnode.h
    libfirm/build/gen/ir/ir/gen_proj_names.h
    libfirm/build/gen/firm_revision.h
    libfirm/include/libfirm/adt/array.h
    libfirm/include/libfirm/adt/bipartite.h
    libfirm/include/libfirm/adt/funcattr.h
    libfirm/include/libfirm/adt/gaussjordan.h
    libfirm/include/libfirm/adt/gaussseidel.h
    libfirm/include/libfirm/adt/hashptr.h
    libfirm/include/libfirm/adt/hungarian.h
    libfirm/include/libfirm/adt/list.h
    libfirm/include/libfirm/adt/obst.h
    libfirm/include/libfirm/adt/obstack.h
    libfirm/include/libfirm/adt/pmap.h
    libfirm/include/libfirm/adt/pqueue.h
    libfirm/include/libfirm/adt/pset.h
    libfirm/include/libfirm/adt/set.h
    libfirm/include/libfirm/adt/unionfind.h
    libfirm/include/libfirm/adt/xmalloc.h
    libfirm/include/libfirm/analyze_irg_args.h
    libfirm/include/libfirm/be.h
    libfirm/include/libfirm/begin.h
    libfirm/include/libfirm/callgraph.h
    libfirm/include/libfirm/cdep.h
    libfirm/include/libfirm/cgana.h
    libfirm/include/libfirm/dbginfo.h
    libfirm/include/libfirm/end.h
    libfirm/include/libfirm/execfreq.h
    libfirm/include/libfirm/firm.h
    libfirm/include/libfirm/firm_common.h
    libfirm/include/libfirm/firm_types.h
    libfirm/include/libfirm/heights.h
    libfirm/include/libfirm/ident.h
    libfirm/include/libfirm/irarch.h
    libfirm/include/libfirm/ircgopt.h
    libfirm/include/libfirm/ircons.h
    libfirm/include/libfirm/irconsconfirm.h
    libfirm/include/libfirm/irdom.h
    libfirm/include/libfirm/irdump.h
    libfirm/include/libfirm/iredgekinds.h
    libfirm/include/libfirm/iredges.h
    libfirm/include/libfirm/irflag.h
    libfirm/include/libfirm/irgmod.h
    libfirm/include/libfirm/irgopt.h
    libfirm/include/libfirm/irgraph.h
    libfirm/include/libfirm/irgwalk.h
    libfirm/include/libfirm/irio.h
    libfirm/include/libfirm/irloop.h
    libfirm/include/libfirm/irmemory.h
    libfirm/include/libfirm/irmode.h
    libfirm/include/libfirm/irnode.h
    libfirm/include/libfirm/irop.h
    libfirm/include/libfirm/iropt.h
    libfirm/include/libfirm/iroptimize.h
    libfirm/include/libfirm/irouts.h
    libfirm/include/libfirm/irprintf.h
    libfirm/include/libfirm/irprog.h
    libfirm/include/libfirm/irverify.h
    libfirm/include/libfirm/jit.h
    libfirm/include/libfirm/lowering.h
    libfirm/include/libfirm/statev.h
    libfirm/include/libfirm/timing.h
    libfirm/include/libfirm/tv.h
    libfirm/include/libfirm/typerep.h
    libfirm/include/libfirm/vrp.h
    libfirm/ir/adt/array.c
    libfirm/ir/adt/bipartite.c
    libfirm/ir/adt/bitfiddle.h
    libfirm/ir/adt/bitset.c
    libfirm/ir/adt/bitset.h
    libfirm/ir/adt/compiler.h
    libfirm/ir/adt/cpset.c
    libfirm/ir/adt/cpset.h
    libfirm/ir/adt/deq.c
    libfirm/ir/adt/deq.h
    libfirm/ir/adt/fourcc.h
    libfirm/ir/adt/gaussjordan.c
    libfirm/ir/adt/gaussseidel.c
    libfirm/ir/adt/hashset.c.h
    libfirm/ir/adt/hashset.h
    libfirm/ir/adt/hungarian.c
    libfirm/ir/adt/pdeq.h
    libfirm/ir/adt/pmap.c
    libfirm/ir/adt/pqueue.c
    libfirm/ir/adt/pset.c
    libfirm/ir/adt/pset_new.c
    libfirm/ir/adt/pset_new.h
    libfirm/ir/adt/raw_bitset.h
    libfirm/ir/adt/set.c
    libfirm/ir/adt/util.h
    libfirm/ir/adt/xmalloc.c
    libfirm/ir/ana/analyze_irg_args.c
    libfirm/ir/ana/callgraph.c
    libfirm/ir/ana/cdep.c
    libfirm/ir/ana/cdep_t.h
    libfirm/ir/ana/cgana.c
    libfirm/ir/ana/constbits.c
    libfirm/ir/ana/constbits.h
    libfirm/ir/ana/dca.c
    libfirm/ir/ana/dca.h
    libfirm/ir/ana/dfs.c
    libfirm/ir/ana/dfs.h
    libfirm/ir/ana/dfs_t.h
    libfirm/ir/ana/domfront.c
    libfirm/ir/ana/execfreq.c
    libfirm/ir/ana/execfreq_t.h
    libfirm/ir/ana/heights.c
    libfirm/ir/ana/irbackedge.c
    libfirm/ir/ana/irbackedge_t.h
    libfirm/ir/ana/ircfscc.c
    libfirm/ir/ana/irconsconfirm.c
    libfirm/ir/ana/irdom.c
    libfirm/ir/ana/irdom_t.h
    libfirm/ir/ana/irlivechk.c
    libfirm/ir/ana/irlivechk.h
    libfirm/ir/ana/irloop.c
    libfirm/ir/ana/irloop_t.h
    libfirm/ir/ana/irmemory.c
    libfirm/ir/ana/irmemory_t.h
    libfirm/ir/ana/irouts.c
    libfirm/ir/ana/irouts_t.h
    libfirm/ir/ana/vrp.c
    libfirm/ir/be/amd64/amd64_bearch.c
    libfirm/ir/be/amd64/amd64_bearch_t.h
    libfirm/ir/be/amd64/amd64_cconv.c
    libfirm/ir/be/amd64/amd64_emitter.c
    libfirm/ir/be/amd64/amd64_emitter.h
    libfirm/ir/be/amd64/amd64_finish.c
    libfirm/ir/be/amd64/amd64_finish.h
    libfirm/ir/be/amd64/amd64_new_nodes.c
    libfirm/ir/be/amd64/amd64_new_nodes.h
    libfirm/ir/be/amd64/amd64_new_nodes_t.h
    libfirm/ir/be/amd64/amd64_nodes_attr.h
    libfirm/ir/be/amd64/amd64_optimize.c
    libfirm/ir/be/amd64/amd64_optimize.h
    libfirm/ir/be/amd64/amd64_pic.c
    libfirm/ir/be/amd64/amd64_transform.c
    libfirm/ir/be/amd64/amd64_transform.h
    libfirm/ir/be/amd64/amd64_varargs.c
    libfirm/ir/be/amd64/amd64_varargs.h
    libfirm/ir/be/amd64/amd64_x87.c
    libfirm/ir/be/arm/arm_bearch.c
    libfirm/ir/be/arm/arm_bearch_t.h
    libfirm/ir/be/arm/arm_cconv.c
    libfirm/ir/be/arm/arm_cconv.h
    libfirm/ir/be/arm/arm_emitter.c
    libfirm/ir/be/arm/arm_emitter.h
    libfirm/ir/be/arm/arm_finish.c
    libfirm/ir/be/arm/arm_lower64.c
    libfirm/ir/be/arm/arm_new_nodes.c
    libfirm/ir/be/arm/arm_new_nodes.h
    libfirm/ir/be/arm/arm_new_nodes_t.h
    libfirm/ir/be/arm/arm_nodes_attr.h
    libfirm/ir/be/arm/arm_optimize.c
    libfirm/ir/be/arm/arm_optimize.h
    libfirm/ir/be/arm/arm_transform.c
    libfirm/ir/be/arm/arm_transform.h
    libfirm/ir/be/ia32/ia32_architecture.c
    libfirm/ir/be/ia32/ia32_architecture.h
    libfirm/ir/be/ia32/ia32_bearch.c
    libfirm/ir/be/ia32/ia32_bearch_t.h
    libfirm/ir/be/ia32/ia32_cconv.c
    libfirm/ir/be/ia32/ia32_emitter.c
    libfirm/ir/be/ia32/ia32_emitter.h
    libfirm/ir/be/ia32/ia32_encode.c
    libfirm/ir/be/ia32/ia32_encode.h
    libfirm/ir/be/ia32/ia32_finish.c
    libfirm/ir/be/ia32/ia32_fpu.c
    libfirm/ir/be/ia32/ia32_intrinsics.c
    libfirm/ir/be/ia32/ia32_new_nodes.c
    libfirm/ir/be/ia32/ia32_new_nodes.h
    libfirm/ir/be/ia32/ia32_new_nodes_t.h
    libfirm/ir/be/ia32/ia32_nodes_attr.h
    libfirm/ir/be/ia32/ia32_optimize.c
    libfirm/ir/be/ia32/ia32_optimize.h
    libfirm/ir/be/ia32/ia32_pic.c
    libfirm/ir/be/ia32/ia32_transform.c
    libfirm/ir/be/ia32/ia32_transform.h
    libfirm/ir/be/ia32/x86_address_mode.c
    libfirm/ir/be/ia32/x86_address_mode.h
    libfirm/ir/be/ia32/x86_asm.c
    libfirm/ir/be/ia32/x86_asm.h
    libfirm/ir/be/ia32/x86_cconv.c
    libfirm/ir/be/ia32/x86_cconv.h
    libfirm/ir/be/ia32/x86_node.c
    libfirm/ir/be/ia32/x86_node.h
    libfirm/ir/be/ia32/x86_x87.c
    libfirm/ir/be/ia32/x86_x87.h
    libfirm/ir/be/sparc/sparc_bearch.c
    libfirm/ir/be/sparc/sparc_bearch_t.h
    libfirm/ir/be/sparc/sparc_cconv.c
    libfirm/ir/be/sparc/sparc_cconv.h
    libfirm/ir/be/sparc/sparc_emitter.c
    libfirm/ir/be/sparc/sparc_emitter.h
    libfirm/ir/be/sparc/sparc_finish.c
    libfirm/ir/be/sparc/sparc_lower64.c
    libfirm/ir/be/sparc/sparc_new_nodes.c
    libfirm/ir/be/sparc/sparc_new_nodes.h
    libfirm/ir/be/sparc/sparc_new_nodes_t.h
    libfirm/ir/be/sparc/sparc_nodes_attr.h
    libfirm/ir/be/sparc/sparc_stackframe.c
    libfirm/ir/be/sparc/sparc_transform.c
    libfirm/ir/be/sparc/sparc_transform.h
    libfirm/ir/be/TEMPLATE/TEMPLATE_bearch.c
    libfirm/ir/be/TEMPLATE/TEMPLATE_bearch_t.h
    libfirm/ir/be/TEMPLATE/TEMPLATE_emitter.c
    libfirm/ir/be/TEMPLATE/TEMPLATE_emitter.h
    libfirm/ir/be/TEMPLATE/TEMPLATE_new_nodes.c
    libfirm/ir/be/TEMPLATE/TEMPLATE_new_nodes.h
    libfirm/ir/be/TEMPLATE/TEMPLATE_new_nodes_t.h
    libfirm/ir/be/TEMPLATE/TEMPLATE_nodes_attr.h
    libfirm/ir/be/TEMPLATE/TEMPLATE_transform.c
    libfirm/ir/be/TEMPLATE/TEMPLATE_transform.h
    libfirm/ir/be/be2addr.c
    libfirm/ir/be/be2addr.h
    libfirm/ir/be/be_t.h
    libfirm/ir/be/be_types.h
    libfirm/ir/be/bearch.c
    libfirm/ir/be/bearch.h
    libfirm/ir/be/beasm.c
    libfirm/ir/be/beasm.h
    libfirm/ir/be/beblocksched.c
    libfirm/ir/be/beblocksched.h
    libfirm/ir/be/becconv.h
    libfirm/ir/be/bechordal.c
    libfirm/ir/be/bechordal.h
    libfirm/ir/be/bechordal_common.c
    libfirm/ir/be/bechordal_common.h
    libfirm/ir/be/bechordal_main.c
    libfirm/ir/be/bechordal_t.h
    libfirm/ir/be/becopyheur4.c
    libfirm/ir/be/becopyilp.c
    libfirm/ir/be/becopyilp2.c
    libfirm/ir/be/becopyilp_t.h
    libfirm/ir/be/becopyopt.c
    libfirm/ir/be/becopyopt.h
    libfirm/ir/be/becopyopt_t.h
    libfirm/ir/be/bediagnostic.c
    libfirm/ir/be/bediagnostic.h
    libfirm/ir/be/bedump.c
    libfirm/ir/be/bedump.h
    libfirm/ir/be/bedwarf.c
    libfirm/ir/be/bedwarf.h
    libfirm/ir/be/bedwarf_t.h
    libfirm/ir/be/beemithlp.c
    libfirm/ir/be/beemithlp.h
    libfirm/ir/be/beemitter.c
    libfirm/ir/be/beemitter.h
    libfirm/ir/be/beflags.c
    libfirm/ir/be/beflags.h
    libfirm/ir/be/begnuas.c
    libfirm/ir/be/begnuas.h
    libfirm/ir/be/beifg.c
    libfirm/ir/be/beifg.h
    libfirm/ir/be/beinfo.c
    libfirm/ir/be/beinfo.h
    libfirm/ir/be/beinsn.c
    libfirm/ir/be/beinsn_t.h
    libfirm/ir/be/beirg.c
    libfirm/ir/be/beirg.h
    libfirm/ir/be/bejit.c
    libfirm/ir/be/bejit.h
    libfirm/ir/be/belistsched.c
    libfirm/ir/be/belistsched.h
    libfirm/ir/be/belive.c
    libfirm/ir/be/belive.h
    libfirm/ir/be/beloopana.c
    libfirm/ir/be/beloopana.h
    libfirm/ir/be/belower.c
    libfirm/ir/be/belower.h
    libfirm/ir/be/bemain.c
    libfirm/ir/be/bemodule.c
    libfirm/ir/be/bemodule.h
    libfirm/ir/be/benode.c
    libfirm/ir/be/benode.h
    libfirm/ir/be/bepbqpcoloring.c
    libfirm/ir/be/bepbqpcoloring.h
    libfirm/ir/be/bepeephole.c
    libfirm/ir/be/bepeephole.h
    libfirm/ir/be/beprefalloc.c
    libfirm/ir/be/bera.c
    libfirm/ir/be/bera.h
    libfirm/ir/be/besched.c
    libfirm/ir/be/besched.h
    libfirm/ir/be/beschednormal.c
    libfirm/ir/be/beschedrand.c
    libfirm/ir/be/beschedtrivial.c
    libfirm/ir/be/bespill.c
    libfirm/ir/be/bespill.h
    libfirm/ir/be/bespillbelady.c
    libfirm/ir/be/bespilldaemel.c
    libfirm/ir/be/bespillslots.c
    libfirm/ir/be/bespillslots.h
    libfirm/ir/be/bespillutil.c
    libfirm/ir/be/bespillutil.h
    libfirm/ir/be/bessaconstr.c
    libfirm/ir/be/bessaconstr.h
    libfirm/ir/be/bessadestr.c
    libfirm/ir/be/bessadestr.h
    libfirm/ir/be/bestack.c
    libfirm/ir/be/bestack.h
    libfirm/ir/be/bestat.c
    libfirm/ir/be/bestat.h
    libfirm/ir/be/bestate.c
    libfirm/ir/be/bestate.h
    libfirm/ir/be/betranshlp.c
    libfirm/ir/be/betranshlp.h
    libfirm/ir/be/beuses.c
    libfirm/ir/be/beuses.h
    libfirm/ir/be/beutil.c
    libfirm/ir/be/beutil.h
    libfirm/ir/be/bevarargs.c
    libfirm/ir/be/bevarargs.h
    libfirm/ir/be/beverify.c
    libfirm/ir/be/beverify.h
    libfirm/ir/common/debug.c
    libfirm/ir/common/debug.h
    libfirm/ir/common/debugger.c
    libfirm/ir/common/debugger.h
    libfirm/ir/common/firm.c
    libfirm/ir/common/firm_common.c
    libfirm/ir/common/panic.c
    libfirm/ir/common/panic.h
    libfirm/ir/common/timing.c
    libfirm/ir/common/version.h
    libfirm/ir/ident/ident.c
    libfirm/ir/ident/ident_t.h
    libfirm/ir/ir/dbginfo.c
    libfirm/ir/ir/dbginfo_t.h
    libfirm/ir/ir/irarch.c
    libfirm/ir/ir/irarch_t.h
    libfirm/ir/ir/irargs.c
    libfirm/ir/ir/irargs_t.h
    libfirm/ir/ir/ircons.c
    libfirm/ir/ir/ircons_t.h
    libfirm/ir/ir/irdump.c
    libfirm/ir/ir/irdump_t.h
    libfirm/ir/ir/irdumptxt.c
    libfirm/ir/ir/iredges.c
    libfirm/ir/ir/iredges_t.h
    libfirm/ir/ir/iredgeset.h
    libfirm/ir/ir/irflag.c
    libfirm/ir/ir/irflag_t.h
    libfirm/ir/ir/irgmod.c
    libfirm/ir/ir/irgraph.c
    libfirm/ir/ir/irgraph_t.h
    libfirm/ir/ir/irgwalk.c
    libfirm/ir/ir/irgwalk_blk.c
    libfirm/ir/ir/irhooks.c
    libfirm/ir/ir/irhooks.h
    libfirm/ir/ir/irio.c
    libfirm/ir/ir/irio_t.h
    libfirm/ir/ir/irmode.c
    libfirm/ir/ir/irmode_t.h
    libfirm/ir/ir/irnode.c
    libfirm/ir/ir/irnode_t.h
    libfirm/ir/ir/irnodehashmap.c
    libfirm/ir/ir/irnodehashmap.h
    libfirm/ir/ir/irnodemap.h
    libfirm/ir/ir/irnodemap_t.h
    libfirm/ir/ir/irnodeset.c
    libfirm/ir/ir/irnodeset.h
    libfirm/ir/ir/irop.c
    libfirm/ir/ir/irop_t.h
    libfirm/ir/ir/irprintf.c
    libfirm/ir/ir/irprofile.c
    libfirm/ir/ir/irprofile.h
    libfirm/ir/ir/irprog.c
    libfirm/ir/ir/irprog_t.h
    libfirm/ir/ir/irssacons.c
    libfirm/ir/ir/irtools.c
    libfirm/ir/ir/irtools.h
    libfirm/ir/ir/irverify.c
    libfirm/ir/ir/irverify_t.h
    libfirm/ir/ir/valueset.c
    libfirm/ir/ir/valueset.h
    libfirm/ir/kaps/brute_force.c
    libfirm/ir/kaps/brute_force.h
    libfirm/ir/kaps/bucket.c
    libfirm/ir/kaps/bucket.h
    libfirm/ir/kaps/bucket_t.h
    libfirm/ir/kaps/heuristical.c
    libfirm/ir/kaps/heuristical.h
    libfirm/ir/kaps/heuristical_co.c
    libfirm/ir/kaps/heuristical_co.h
    libfirm/ir/kaps/heuristical_co_ld.c
    libfirm/ir/kaps/heuristical_co_ld.h
    libfirm/ir/kaps/html_dumper.c
    libfirm/ir/kaps/html_dumper.h
    libfirm/ir/kaps/kaps.c
    libfirm/ir/kaps/kaps.h
    libfirm/ir/kaps/matrix.c
    libfirm/ir/kaps/matrix.h
    libfirm/ir/kaps/matrix_t.h
    libfirm/ir/kaps/optimal.c
    libfirm/ir/kaps/optimal.h
    libfirm/ir/kaps/pbqp_edge.c
    libfirm/ir/kaps/pbqp_edge.h
    libfirm/ir/kaps/pbqp_edge_t.h
    libfirm/ir/kaps/pbqp_node.c
    libfirm/ir/kaps/pbqp_node.h
    libfirm/ir/kaps/pbqp_node_t.h
    libfirm/ir/kaps/pbqp_t.h
    libfirm/ir/kaps/vector.c
    libfirm/ir/kaps/vector.h
    libfirm/ir/kaps/vector_t.h
    libfirm/ir/libcore/lc_appendable.c
    libfirm/ir/libcore/lc_appendable.h
    libfirm/ir/libcore/lc_opts.c
    libfirm/ir/libcore/lc_opts.h
    libfirm/ir/libcore/lc_opts_enum.c
    libfirm/ir/libcore/lc_opts_enum.h
    libfirm/ir/libcore/lc_opts_t.h
    libfirm/ir/libcore/lc_printf.c
    libfirm/ir/libcore/lc_printf.h
    libfirm/ir/lower/lower_alloc.c
    libfirm/ir/lower/lower_alloc.h
    libfirm/ir/lower/lower_builtins.c
    libfirm/ir/lower/lower_builtins.h
    libfirm/ir/lower/lower_calls.c
    libfirm/ir/lower/lower_calls.h
    libfirm/ir/lower/lower_copyb.c
    libfirm/ir/lower/lower_dw.c
    libfirm/ir/lower/lower_dw.h
    libfirm/ir/lower/lower_hl.c
    libfirm/ir/lower/lower_intrinsics.c
    libfirm/ir/lower/lower_mode_b.c
    libfirm/ir/lower/lower_mode_b.h
    libfirm/ir/lower/lower_mux.c
    libfirm/ir/lower/lower_softfloat.c
    libfirm/ir/lower/lower_softfloat.h
    libfirm/ir/lower/lower_switch.c
    libfirm/ir/lpp/lpp.c
    libfirm/ir/lpp/lpp.h
    libfirm/ir/lpp/lpp_cplex.c
    libfirm/ir/lpp/lpp_cplex.h
    libfirm/ir/lpp/lpp_gurobi.c
    libfirm/ir/lpp/lpp_gurobi.h
    libfirm/ir/lpp/lpp_solvers.c
    libfirm/ir/lpp/lpp_solvers.h
    libfirm/ir/lpp/mps.c
    libfirm/ir/lpp/mps.h
    libfirm/ir/lpp/sp_matrix.c
    libfirm/ir/lpp/sp_matrix.h
    libfirm/ir/obstack/obstack.c
    libfirm/ir/obstack/obstack_printf.c
    libfirm/ir/opt/boolopt.c
    libfirm/ir/opt/cfopt.c
    libfirm/ir/opt/code_placement.c
    libfirm/ir/opt/combo.c
    libfirm/ir/opt/convopt.c
    libfirm/ir/opt/critical_edges.c
    libfirm/ir/opt/dead_code_elimination.c
    libfirm/ir/opt/funccall.c
    libfirm/ir/opt/garbage_collect.c
    libfirm/ir/opt/gvn_pre.c
    libfirm/ir/opt/ifconv.c
    libfirm/ir/opt/instrument.c
    libfirm/ir/opt/instrument.h
    libfirm/ir/opt/ircgopt.c
    libfirm/ir/opt/ircomplib.c
    libfirm/ir/opt/irgopt.c
    libfirm/ir/opt/iropt.c
    libfirm/ir/opt/iropt_dbg.h
    libfirm/ir/opt/iropt_t.h
    libfirm/ir/opt/jumpthreading.c
    libfirm/ir/opt/ldstopt.c
    libfirm/ir/opt/loop.c
    libfirm/ir/opt/occult_const.c
    libfirm/ir/opt/opt_blocks.c
    libfirm/ir/opt/opt_confirms.c
    libfirm/ir/opt/opt_frame.c
    libfirm/ir/opt/opt_init.h
    libfirm/ir/opt/opt_inline.c
    libfirm/ir/opt/opt_ldst.c
    libfirm/ir/opt/opt_osr.c
    libfirm/ir/opt/parallelize_mem.c
    libfirm/ir/opt/proc_cloning.c
    libfirm/ir/opt/reassoc.c
    libfirm/ir/opt/reassoc_t.h
    libfirm/ir/opt/return.c
    libfirm/ir/opt/rm_bads.c
    libfirm/ir/opt/rm_tuples.c
    libfirm/ir/opt/scalar_replace.c
    libfirm/ir/opt/scalar_replace.h
    libfirm/ir/opt/tailrec.c
    libfirm/ir/opt/unreachable.c
    libfirm/ir/stat/stat_timing.c
    libfirm/ir/stat/stat_timing.h
    libfirm/ir/stat/statev.c
    libfirm/ir/stat/statev_t.h
    libfirm/ir/tr/entity.c
    libfirm/ir/tr/entity_t.h
    libfirm/ir/tr/tr_inheritance.c
    libfirm/ir/tr/trverify.c
    libfirm/ir/tr/type.c
    libfirm/ir/tr/type_t.h
    libfirm/ir/tr/typewalk.c
    libfirm/ir/tv/fltcalc.c
    libfirm/ir/tv/fltcalc.h
    libfirm/ir/tv/strcalc.c
    libfirm/ir/tv/strcalc.h
    libfirm/ir/tv/tv.c
    libfirm/ir/tv/tv_t.h
    libfirm/scripts/templates/gen_irio.c
    libfirm/scripts/templates/gen_irnode.c
    libfirm/scripts/templates/gen_irnode.h
    libfirm/scripts/templates/gen_proj_names.h
    libfirm/scripts/templates/nodes.h
    libfirm/support/libfirmprof/instrument.c
    libfirm/unittests/deq.c
    libfirm/unittests/globalmap.c
    libfirm/unittests/nan_payload.c
    libfirm/unittests/rbitset.c
    libfirm/unittests/sc_val_from_bits.c
    libfirm/unittests/snprintf.c
    libfirm/unittests/strcalc.c
    libfirm/unittests/tarval_calc.c
    libfirm/unittests/tarval_float.c
    libfirm/unittests/tarval_floatops.c
    libfirm/unittests/tarval_from_to.c
    libfirm/unittests/tarval_is_long.c
    src/cmdline/actions.c
    src/cmdline/actions.h
    src/cmdline/help.c
    src/cmdline/help.h
    src/cmdline/options.c
    src/cmdline/options.h
    src/cmdline/parameters.c
    src/cmdline/parameters.h
    src/cmdline/strutil.c
    src/cmdline/strutil.h
    src/cmdline/version.h
    src/lib/cfb.c
    src/lib/cfb.h
    src/lib/cfg.c
    src/lib/cfg.h
    src/lib/convert.c
    src/lib/convert.h
    src/lib/func.c
    src/lib/func.h
    src/lib/optimizations.c
    src/lib/optimizations.h
    src/lib/prog.c
    src/lib/prog.h
    src/lib/ptr_list.c
    src/lib/ptr_list.h
    src/lib/random.c
    src/lib/random.h
    src/lib/resolve.c
    src/lib/resolve.h
    src/lib/statistics.c
    src/lib/statistics.h
    src/lib/types.c
    src/lib/types.h
    src/lib/utils.h
    src/main.c
    test.c)

add_executable(firmsmith ${SOURCE_FILES})